--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,11 +21,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Setup Node.js
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
-        node-version: 16.14.2
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: subdir/package-lock.json
     - run: npm ci
     - run: npm run build --if-present
+    - run: npm install
     - run: npm test
