--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: '16.14.2'
         cache: 'npm'
-        cache-dependency-path: subdir/package-lock.json
+        # cache-dependency-path: subdir/package-lock.json
     - run: npm ci
     - run: npm run build --if-present
     - run: npm install
